// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadlessPagination renders correctly with advanced setup of prevButton, pageButton and nextButton using Tailwind 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full h-10 text-sm select-none"
  >
    <button
      class="flex items-center mr-2 text-gray-500 cursor-pointer hover:text-gray-600 dark:hover:text-gray-200 focus:outline-none"
      type="button"
    >
      Previous
    </button>
    <div
      class="flex items-center justify-center flex-grow"
    >
      <span
        class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
      >
        1
      </span>
      <span
        class="w-10 px-0.5 text-center"
      >
        ...
      </span>
      <span
        class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
      >
        4
      </span>
      <span
        class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
      >
        5
      </span>
      <span
        class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer bg-primary-50 dark:bg-opacity-0 text-primary-600 dark:text-white"
      >
        6
      </span>
      <span
        class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
      >
        7
      </span>
      <span
        class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
      >
        8
      </span>
      <span
        class="w-10 px-0.5 text-center"
      >
        ...
      </span>
      <span
        class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
      >
        10
      </span>
    </div>
    <button
      class="flex items-center mr-2 text-gray-500 opacity-50 hover:text-gray-600 dark:hover:text-gray-200 focus:outline-none"
      type="button"
    >
      Next
    </button>
  </div>
</DocumentFragment>
`;

exports[`HeadlessPagination renders correctly with basic setup of prevButton, pageButton and nextButton 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      data-testid="prev"
      type="button"
    >
      Previous
    </button>
    <div
      class="flex items-center justify-center flex-grow"
    >
      <span
        data-testid="inactive-page-button-1"
      >
        1
      </span>
      <span>
        ...
      </span>
      <span
        data-testid="inactive-page-button-4"
      >
        4
      </span>
      <span
        data-testid="inactive-page-button-5"
      >
        5
      </span>
      <span
        data-testid="active-page-button"
      >
        6
      </span>
      <span
        data-testid="inactive-page-button-7"
      >
        7
      </span>
      <span
        data-testid="inactive-page-button-8"
      >
        8
      </span>
      <span>
        ...
      </span>
      <span
        data-testid="inactive-page-button-10"
      >
        10
      </span>
    </div>
    <button
      data-testid="next"
      type="button"
    >
      Next
    </button>
  </div>
</DocumentFragment>
`;

exports[`HeadlessPagination renders correctly with different truncable text 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      data-testid="prev"
      type="button"
    >
      Previous
    </button>
    <div
      class="flex items-center justify-center flex-grow"
    >
      <span
        data-testid="inactive-page-button-1"
      >
        1
      </span>
      <span>
        ---
      </span>
      <span
        data-testid="inactive-page-button-4"
      >
        4
      </span>
      <span
        data-testid="inactive-page-button-5"
      >
        5
      </span>
      <span
        data-testid="active-page-button"
      >
        6
      </span>
      <span
        data-testid="inactive-page-button-7"
      >
        7
      </span>
      <span
        data-testid="inactive-page-button-8"
      >
        8
      </span>
      <span>
        ---
      </span>
      <span
        data-testid="inactive-page-button-10"
      >
        10
      </span>
    </div>
    <button
      data-testid="next"
      type="button"
    >
      Next
    </button>
  </div>
</DocumentFragment>
`;
